[gd_scene load_steps=8 format=2]

[ext_resource path="res://framework/resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://framework/ui/modules/menu_button/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://framework/resources/fonts/m3x6/pixel_32.tres" type="FontFile" id=3]
[ext_resource path="res://framework/ui/menus/leaderboard/Leaderboard.tscn" type="PackedScene" id=4]
[ext_resource path="res://framework/ui/menus/main_menu/main_menu.gd" type="Script" id=5]
[ext_resource path="res://framework/ui/menus/options_menu/OptionsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://framework/ui/modules/cursor/Cursor.tscn" type="PackedScene" id=7]

[node name="MainMenu" type="CanvasLayer"]
layer = 0
script = ExtResource( 5 )
OptionsMenu = ExtResource( 6 )
Leaderboard = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
offset_right = 320.0
offset_bottom = 240.0
color = Color( 0.372549, 0.341176, 0.309804, 1 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
offset_right = 320.0
offset_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
offset_left = 117.0
offset_top = 80.0
offset_right = 203.0
offset_bottom = 160.0
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
offset_right = 86.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource( 3 )
text = "GAME TITLE"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
offset_left = 21.0
offset_top = 28.0
offset_right = 65.0
offset_bottom = 80.0
custom_minimum_size = Vector2( 40, 0 )
size_flags_horizontal = 4

[node name="PlayButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
offset_right = 44.0
offset_bottom = 10.0
text = "PLAY"

[node name="LeaderboardButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
offset_top = 14.0
offset_right = 44.0
offset_bottom = 24.0
text = "LEADERBOARD"

[node name="OptionsButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
offset_top = 28.0
offset_right = 44.0
offset_bottom = 38.0
text = "OPTIONS"

[node name="QuitButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
offset_top = 42.0
offset_right = 44.0
offset_bottom = 52.0
text = "QUIT"

[node name="Cursor" parent="." instance=ExtResource( 7 )]
